Fixes in z-index of social images and helper-text

--- a/src/components/main-page/barbers-cardv2/barbers-card.scss
+++ b/src/components/main-page/barbers-cardv2/barbers-card.scss
@@ -39,7 +39,7 @@
 
         .help-action {
             position: absolute;
-            z-index: 1;
+            // z-index: 1;
             text-transform: uppercase;
             color: $cool-color;
             writing-mode: vertical-lr;
