--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -3,7 +3,7 @@
 */
 
 /* background color of the page */
-$backgroun-page: #000000;
+$background-page: #000000;
 
 /* dark theme colors */
 $primary-dark: #2c2c2c;
@@ -35,48 +35,6 @@ $text-size: 16px;
 
 /* control of media screen size */
 $mobile-screen: 1100px;
-
-/* 
-  Adjusts in default styles HTML 
-*/
-
-* {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-
-/* body style */
-body {
-  margin: 0;
-  padding: 0;
-  background-color: $backgroun-page;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  font-family: 'Open Sans', sans-serif;
-}
-
-/* Scrollbar style */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 10px $shadow-color;
-}
-
-::-webkit-scrollbar-thumb {
-  height: max-content !important;
-  box-shadow: inset 0 0 3px $cool-color;
-  border-radius: 4px;
-}
-
-/* 'hidde' a element */
-a {
-  color: rgba(0, 0, 0, 0) !important;
-}
 
 /* background color of components */
 .dark {
